--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                 <div class="carousel-slides">
                   <div class="carousel-slide active">
                     <img
-                      src="./images/sms-images/Screenshot 2026-02-03 114558.png"
+                      src="./images/sms-images/1.png"
                       alt="SMS Dashboard Interface"
                       class="project-image lightbox-trigger"
                       data-lightbox-group="project1"
@@ -728,7 +728,7 @@
                   </div>
                   <div class="carousel-slide">
                     <img
-                      src="./images/sms-images/Screenshot 2026-02-03 114703.png"
+                      src="./images/sms-images/2.png"
                       alt="Database Schema"
                       class="project-image lightbox-trigger"
                       data-lightbox-group="project1"
@@ -736,7 +736,7 @@
                   </div>
                   <div class="carousel-slide">
                     <img
-                      src="./images/sms-images/Screenshot 2026-02-03 114735.png"
+                      src="./images/sms-images/3.png"
                       alt="Mobile Responsive Design"
                       class="project-image lightbox-trigger"
                       data-lightbox-group="project1"
@@ -744,7 +744,7 @@
                   </div>
                   <div class="carousel-slide">
                     <img
-                      src="./images/sms-images/Screenshot 2026-02-03 114802.png"
+                      src="./images/sms-images/4.png"
                       alt="Mobile Responsive Design"
                       class="project-image lightbox-trigger"
                       data-lightbox-group="project1"
